# voxelot

./: .gitignore  ARCHITECTURE_AND_ROADMAP.md  Cargo.toml  DESIGN_TILE_AND_POSTFX_PLAN.md  OUTLINE.md  QUICK_REFERENCE.md  README.md  RENDERING_IMPROVEMENTS.md  SUGGESTIONS.md  VOXEL_GENERATOR_REVAMP.md  config.toml  octree_writer.py  osm_voxel_generator.py  osm_voxels.txt  palette.txt  test_world.oct  voxel_generator_tiles.py  world_2_meta.json
shaders/: bloom_blur.wgsl  bloom_extract.wgsl  debug_coc.wgsl  dof_blur.wgsl  dof_coc.wgsl  dof_coc_copy.wgsl  dof_combine.wgsl  dof_smooth.wgsl  dual_kawase_down.wgsl  dual_kawase_up.wgsl  fullscreen.wgsl  gpu_cull.wgsl  post_composite.wgsl  voxel.wgsl
shaders_wip/: dof_blur.wgsl  voxel.wgsl
src/: config.rs  culling.rs  lib.rs  lib_hierarchical.rs  main.rs  meshing.rs  octree_format.rs  palette.rs
src/shaders/: fullscreen.wgsl
worlds/: octree_writer.py  voxel_generator_tiles.py  world_1_meta.json  world_3_meta.json
