[package]
name = "voxelot"
version = "0.1.0"
edition = "2021"

[features]
default = []
viewer-debug = []
mesh-debug = []
test-block-world = []

[dependencies]
croaring = "2"
fxhash = "0.2"
rayon = "1.10"
glam = "0.27"

# wgpu-based viewer (desktop)
wgpu = "27.0.1"
winit = "0.30.12"
pollster = "0.4.0"
bytemuck = { version = "1.13", features = ["derive"] }
env_logger = "0.11.8"
sysinfo = "0.29"

[dev-dependencies]
anyhow = "1"

[profile.release]
debug = true  # Enable debug symbols for profiling
